# tgfs-translation

./: README.md  es.py  pyproject.toml
